--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "aws s3 rm --recursive s3://smgtannotation",
+    "deploy": "aws s3 cp --recursive build/ s3://smgtannotation --acl public-read"
   },
   "eslintConfig": {
     "extends": "react-app"
