--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
 /web/node_modules
 /web/package-lock.json
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+web/node_modules
+web/.pnp
+web/.pnp.js
+
+# testing
+web/coverage
+
+# production
+web/build
+
+# misc
+web/.DS_Store
+web/.env.local
+web/.env.development.local
+web/.env.test.local
+web/.env.production.local
+
+web/npm-debug.log*
+web/yarn-debug.log*
+web/yarn-error.log*
+web/yarn.lock
+web/public
+!web/src
+!web/src/*
+web/.idea
+
+# server
+
+server/.idea
+server/.serverless
+server/processing/labeling_lambda.zip
+server/.DS_Store
